// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[resourceTitleId].page DocumentsHTMLPage ConvertedDocument should match snapshot for converted document 1`] = `
<body>
  <div>
    <nav
      aria-label="Breadcrumbs"
      data-component="breadcrumbs"
      role="navigation"
    >
      <ol
        class="breadcrumbs"
      >
        <li
          class="breadcrumbs__crumb"
        >
          <a
            href="/"
          >
            Home
          </a>
        </li>
        <li
          class="breadcrumbs__crumb"
        >
          <a
            href="/standards-and-indicators"
          >
            Standards and Indicators
          </a>
        </li>
        <li
          class="breadcrumbs__crumb"
        >
          <a
            href="/standards-and-indicators/indicators"
          >
            Indicators
          </a>
        </li>
        <li
          class="breadcrumbs__crumb"
        >
          <a
            href="/indicators/indevelopment"
          >
            In development
          </a>
        </li>
        <li
          class="breadcrumbs__crumb"
        >
          <a
            href="/indicators/indevelopment/gid-dg10086"
          >
            GID-DG10086
          </a>
        </li>
        <li
          class="breadcrumbs__crumb"
        >
          <a
            href="/indicators/indevelopment/gid-dg10086/documents"
          >
            Project documents
          </a>
        </li>
        <li
          class="breadcrumbs__crumb"
        >
          <span>
            Final scope (html conversion)
          </span>
        </li>
      </ol>
    </nav>
    <script
      type="application/ld+json"
    >
      {
  "@context": "http://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "position": 1,
      "item": {
        "@id": "/",
        "name": "Home"
      }
    },
    {
      "@type": "ListItem",
      "position": 2,
      "item": {
        "@id": "/standards-and-indicators",
        "name": "Standards and Indicators"
      }
    },
    {
      "@type": "ListItem",
      "position": 3,
      "item": {
        "@id": "/standards-and-indicators/indicators",
        "name": "Indicators"
      }
    },
    {
      "@type": "ListItem",
      "position": 4,
      "item": {
        "@id": "/indicators/indevelopment",
        "name": "In development"
      }
    },
    {
      "@type": "ListItem",
      "position": 5,
      "item": {
        "@id": "/indicators/indevelopment/gid-dg10086",
        "name": "GID-DG10086"
      }
    },
    {
      "@type": "ListItem",
      "position": 6,
      "item": {
        "@id": "/indicators/indevelopment/gid-dg10086/documents",
        "name": "Project documents"
      }
    },
    {
      "@type": "ListItem",
      "position": 7,
      "item": {
        "name": "Final scope (html conversion)"
      }
    }
  ]
}
    </script>
    <div
      class="page-header"
      data-component="page-header"
      id="content-start"
    >
      <h1
        class="page-header__heading page-header__heading--alt"
      >
        Test Conversion John H
      </h1>
      <ul
        class="page-header__metadata"
      >
        <li>
          In development GID-DG10086
        </li>
        <li>
          Expected publication date: TBC
        </li>
        <li>
          <a
            href="https://www.nice.org.uk/about/what-we-do/our-programmes/nice-guidance/nice-diagnostics-guidance/dt-stakeholder-registration?t=&p=GID-DG10086&returnUrl=/guidance/topic-selection/gid-dg10086"
          >
            Register as a stakeholder
          </a>
        </li>
      </ul>
    </div>
    <nav
      class="horizontal-nav"
    >
      <ul
        class="horizontal-nav__list"
      >
        <li
          class="horizontal-nav__item"
          data-component="horizontal-nav"
        >
          <a
            aria-current="false"
            class="horizontal-nav__link"
            href="/guidance/topic-selection/gid-dg10086"
          >
            Project information
          </a>
        </li>
        <li
          class="horizontal-nav__item"
          data-component="horizontal-nav"
        >
          <a
            aria-current="true"
            class="horizontal-nav__link"
            href="/guidance/topic-selection/gid-dg10086/documents"
          >
            Project documents
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="grid grid--loose"
    >
      <section
        data-component="grid-item"
        data-g="12 md:4 lg:3"
      >
        <a
          aria-label="Download (PDF)"
          class="btn btn--cta download"
          data-component="button--cta"
          href="/guidance/topic-selection/gid-dg10086/downloads/gid-dg10086-final-scope-pdf.pdf"
          target="_blank"
        >
          Download (PDF)
        </a>
        <nav
          aria-label="chapters"
          class="stacked-nav"
          data-component="stacked-nav"
        >
          <ul
            class="stacked-nav__list"
          >
            <li
              class="stacked-nav__list-item"
            >
              <a
                aria-current="true"
                href="/guidance/topic-selection/gid-dg10086/documents/final-scope-html-conversion"
              >
                <span
                  class="stacked-nav__content-wrapper"
                >
                  Overview
                </span>
              </a>
            </li>
            <li
              class="stacked-nav__list-item"
            >
              <a
                aria-current="false"
                href="/guidance/topic-selection/gid-dg10086/documents/final-scope-html-conversion/chapter/recommendations"
              >
                <span
                  class="stacked-nav__content-wrapper"
                >
                  Recommendations
                </span>
              </a>
            </li>
          </ul>
        </nav>
      </section>
      <section
        data-component="grid-item"
        data-g="12 md:8 lg:9"
      >
        <div
          class="chapterContent"
        >
          <div
            class="chapter"
            id="0-1-overview"
            title="Overview"
            xmlns="http://www.w3.org/1999/xhtml"
          >
            
  
            <h2
              class="title"
            >
              
    
              <a
                class="annotator-chapter"
                data-heading-type="chapter"
                id="overview"
                style="position:relative"
              />
              Overview
              <span
                class="annotator-adder"
              />
            </h2>
            
  
            <p>
              This guideline covers care for women of any age (including girls and young women under 18) who request an abortion. It aims to improve the organisation of services and make them easier for women to access. Detailed recommendations on conducting abortions at different gestational stages are also included, to ensure that women get the safest and most effective care possible. 
            </p>
            

          </div>
        </div>
        <div
          class="prev-next"
        >
          <nav
            aria-label="Previous and next pages"
          >
            <a
              class="prev-next__link"
              href="/guidance/topic-selection/gid-dg10086/documents/final-scope-html-conversion/chapter/recommendations"
            >
              <span
                class="prev-next__link-intro"
              >
                Next page
              </span>
              <span
                class="prev-next__link-text"
              >
                Recommendations
              </span>
            </a>
          </nav>
        </div>
      </section>
    </div>
  </div>
</body>
`;

exports[`[resourceTitleId].page DocumentsHTMLPage should match snapshot for main content 1`] = `
<body>
  <div>
    <nav
      aria-label="Breadcrumbs"
      data-component="breadcrumbs"
      role="navigation"
    >
      <ol
        class="breadcrumbs"
      >
        <li
          class="breadcrumbs__crumb"
        >
          <a
            href="/"
          >
            Home
          </a>
        </li>
        <li
          class="breadcrumbs__crumb"
        >
          <a
            href="/standards-and-indicators"
          >
            Standards and Indicators
          </a>
        </li>
        <li
          class="breadcrumbs__crumb"
        >
          <a
            href="/standards-and-indicators/indicators"
          >
            Indicators
          </a>
        </li>
        <li
          class="breadcrumbs__crumb"
        >
          <a
            href="/indicators/indevelopment"
          >
            In development
          </a>
        </li>
        <li
          class="breadcrumbs__crumb"
        >
          <a
            href="/indicators/indevelopment/gid-ta10730"
          >
            GID-TA10730
          </a>
        </li>
        <li
          class="breadcrumbs__crumb"
        >
          <a
            href="/indicators/indevelopment/gid-ta10730/documents"
          >
            Project documents
          </a>
        </li>
        <li
          class="breadcrumbs__crumb"
        >
          <span>
            Invitation to participate
          </span>
        </li>
      </ol>
    </nav>
    <script
      type="application/ld+json"
    >
      {
  "@context": "http://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "position": 1,
      "item": {
        "@id": "/",
        "name": "Home"
      }
    },
    {
      "@type": "ListItem",
      "position": 2,
      "item": {
        "@id": "/standards-and-indicators",
        "name": "Standards and Indicators"
      }
    },
    {
      "@type": "ListItem",
      "position": 3,
      "item": {
        "@id": "/standards-and-indicators/indicators",
        "name": "Indicators"
      }
    },
    {
      "@type": "ListItem",
      "position": 4,
      "item": {
        "@id": "/indicators/indevelopment",
        "name": "In development"
      }
    },
    {
      "@type": "ListItem",
      "position": 5,
      "item": {
        "@id": "/indicators/indevelopment/gid-ta10730",
        "name": "GID-TA10730"
      }
    },
    {
      "@type": "ListItem",
      "position": 6,
      "item": {
        "@id": "/indicators/indevelopment/gid-ta10730/documents",
        "name": "Project documents"
      }
    },
    {
      "@type": "ListItem",
      "position": 7,
      "item": {
        "name": "Invitation to participate"
      }
    }
  ]
}
    </script>
    <div
      class="page-header"
      data-component="page-header"
      id="content-start"
    >
      <h1
        class="page-header__heading page-header__heading--alt"
      >
        Lu vipivotide tetraxetan for treating PSMA-positive hormone-relapsed metastatic prostate cancer after 2 or more therapies [ID3840]
      </h1>
      <ul
        class="page-header__metadata"
      >
        <li>
          In development GID-TA10730
        </li>
        <li>
          Expected publication date: TBC
        </li>
      </ul>
    </div>
    <nav
      class="horizontal-nav"
    >
      <ul
        class="horizontal-nav__list"
      >
        <li
          class="horizontal-nav__item"
          data-component="horizontal-nav"
        >
          <a
            aria-current="false"
            class="horizontal-nav__link"
            href="/guidance/indevelopment/gid-ta10730"
          >
            Project information
          </a>
        </li>
        <li
          class="horizontal-nav__item"
          data-component="horizontal-nav"
        >
          <a
            aria-current="true"
            class="horizontal-nav__link"
            href="/guidance/indevelopment/gid-ta10730/documents"
          >
            Project documents
          </a>
        </li>
      </ul>
    </nav>
    <h2>
      Invitation to participate
    </h2>
    <ul
      class="list list--unstyled"
    >
      <li>
        <article
          class="card"
          data-component="card"
        >
          <header
            class="card__header"
          >
            <p
              class="card__heading"
            >
              <a
                href="/guidance/indevelopment/gid-ta10730/downloads/gid-ta10730-final-matrix.pdf"
              >
                Final stakeholder list
                 
                (
                PDF
                ,
                 
                169 kB
                )
              </a>
            </p>
          </header>
          <dl
            class="card__metadata"
          >
            <div
              class="card__metadatum"
            >
              <dt
                class="visually-hidden"
              >
                Type
              </dt>
              <dd>
                Invitation to participate
              </dd>
            </div>
            <div
              class="card__metadatum"
            >
              <dt
                class="visually-hidden"
              >
                Date
              </dt>
              <dd>
                <time
                  datetime="2021-11-03"
                >
                  3 November 2021
                </time>
              </dd>
            </div>
            <div
              class="card__metadatum"
            >
              <dt
                class="visually-hidden"
              >
                File type
              </dt>
              <dd>
                PDF
              </dd>
            </div>
            <div
              class="card__metadatum"
            >
              <dt
                class="visually-hidden"
              >
                File size
              </dt>
              <dd>
                169 kB
              </dd>
            </div>
          </dl>
        </article>
      </li>
      <li>
        <article
          class="card"
          data-component="card"
        >
          <header
            class="card__header"
          >
            <p
              class="card__heading"
            >
              <a
                href="/guidance/indevelopment/gid-ta10730/downloads/gid-ta10730-equality-impact-assessment-scoping.pdf"
              >
                Equality impact assessment (Scoping)
                 
                (
                PDF
                ,
                 
                127 kB
                )
              </a>
            </p>
          </header>
          <dl
            class="card__metadata"
          >
            <div
              class="card__metadatum"
            >
              <dt
                class="visually-hidden"
              >
                Type
              </dt>
              <dd>
                Invitation to participate
              </dd>
            </div>
            <div
              class="card__metadatum"
            >
              <dt
                class="visually-hidden"
              >
                Date
              </dt>
              <dd>
                <time
                  datetime="2021-11-03"
                >
                  3 November 2021
                </time>
              </dd>
            </div>
            <div
              class="card__metadatum"
            >
              <dt
                class="visually-hidden"
              >
                File type
              </dt>
              <dd>
                PDF
              </dd>
            </div>
            <div
              class="card__metadatum"
            >
              <dt
                class="visually-hidden"
              >
                File size
              </dt>
              <dd>
                127 kB
              </dd>
            </div>
          </dl>
        </article>
      </li>
      <li>
        <article
          class="card"
          data-component="card"
        >
          <header
            class="card__header"
          >
            <p
              class="card__heading"
            >
              <a
                href="/guidance/indevelopment/gid-ta10730/downloads/gid-ta10730-scope-consultation-comments-and-responses.pdf"
              >
                NICE's response to comments on the draft scope and provisional stakeholder list
                 
                (
                PDF
                ,
                 
                555 kB
                )
              </a>
            </p>
          </header>
          <dl
            class="card__metadata"
          >
            <div
              class="card__metadatum"
            >
              <dt
                class="visually-hidden"
              >
                Type
              </dt>
              <dd>
                Invitation to participate
              </dd>
            </div>
            <div
              class="card__metadatum"
            >
              <dt
                class="visually-hidden"
              >
                Date
              </dt>
              <dd>
                <time
                  datetime="2021-11-03"
                >
                  3 November 2021
                </time>
              </dd>
            </div>
            <div
              class="card__metadatum"
            >
              <dt
                class="visually-hidden"
              >
                File type
              </dt>
              <dd>
                PDF
              </dd>
            </div>
            <div
              class="card__metadatum"
            >
              <dt
                class="visually-hidden"
              >
                File size
              </dt>
              <dd>
                555 kB
              </dd>
            </div>
          </dl>
        </article>
      </li>
      <li>
        <article
          class="card"
          data-component="card"
        >
          <header
            class="card__header"
          >
            <p
              class="card__heading"
            >
              <a
                href="/guidance/indevelopment/gid-ta10730/downloads/gid-ta10730-final-scope-2.pdf"
              >
                Final scope
                 
                (
                PDF
                ,
                 
                228 kB
                )
              </a>
            </p>
          </header>
          <dl
            class="card__metadata"
          >
            <div
              class="card__metadatum"
            >
              <dt
                class="visually-hidden"
              >
                Type
              </dt>
              <dd>
                Invitation to participate
              </dd>
            </div>
            <div
              class="card__metadatum"
            >
              <dt
                class="visually-hidden"
              >
                Date
              </dt>
              <dd>
                <time
                  datetime="2022-09-22"
                >
                  22 September 2022
                </time>
              </dd>
            </div>
            <div
              class="card__metadatum"
            >
              <dt
                class="visually-hidden"
              >
                File type
              </dt>
              <dd>
                PDF
              </dd>
            </div>
            <div
              class="card__metadatum"
            >
              <dt
                class="visually-hidden"
              >
                File size
              </dt>
              <dd>
                228 kB
              </dd>
            </div>
          </dl>
        </article>
      </li>
    </ul>
  </div>
</body>
`;
